--- a/WebpagesGL.html
+++ b/WebpagesGL.html
@@ -20,7 +20,7 @@
 	<hr />
 	
 	<!-- My Photo -->
-	<img src="Profile.jpg" alt="A picture of Nirmiti">
+	<img src="Profile.jpg" alt="A picture of Nirmiti" id="photo-resize">
 	
 	<!-- A Paragraph About Myself -->
 	<p>Hello! My name is Nirmiti Nerkar and I'm a <em>freshman</em> in NCSU's College of Engineering. I am from North Carolina and grew up in Cary, NC. 
